# fastapi-celery-docker

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5a53ad0d5872_.py  5b48645411d6_.py  72d0b4eae991_.py
compose/: auto_deploy_do.sh
compose/local/fastapi/: Dockerfile
compose/local/fastapi/celery/flower/: start
compose/local/fastapi/celery/worker/: start
compose/production/fastapi/: Dockerfile
project/: __init__.py  celery_utils.py  config.py
project/users/: tasks.py  views.py
project/users/templates/: form.html  form_socketio.html  form_ws.html
project/ws/: views.py
tests/: conftest.py  test_celery_utils.py
tests/users/: test_tasks.py  test_views.py
