[project]
name = "fastapi-celery-docker"
version = "0.1.0"
description = ""
authors = [{ name = "Francisco De La Cruz", email = "helloquico@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi (==0.108.0)",
  "uvicorn[standard] (==0.25.0)",
  "celery (==5.3.6)",
  "redis (==5.0.1)",
  "flower (==2.0.1)",
  "sqlalchemy (==2.0.25)",
  "alembic (==1.13.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
